force-app/main/default/objects/ServiceContract/fields/Third_Party_Compliance__c.field-meta.xml
<CustomField>
    <fullName>Third_Party_Compliance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Compliance record that supports this service contract.</description>
    <label>Third Party Compliance</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Third_Party_Compliance__c.Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Third_Party_Compliance__c</referenceTo>
    <relationshipLabel>Service Contracts</relationshipLabel>
    <relationshipName>Service_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>