force-app/main/default/objects/ServiceContract/fields/Third_Party_Compliance_Status__c.field-meta.xml
<CustomField>
    <fullName>Third_Party_Compliance_Status__c</fullName>
    <formula>TEXT(Third_Party_Compliance__r.Compliance_Status__c)</formula>
    <label>Third Party Compliance Status</label>
    <type>Text</type>
</CustomField>