force-app/main/default/objects/ServiceContract/recordTypes/Distrbution_Agreement.recordType-meta.xml
<RecordType>
    <fullName>Distrbution_Agreement</fullName>
    <active>true</active>
    <description>used to manage Distribution Agreements</description>
    <label>Distrbution Agreement</label>
</RecordType>