force-app/main/default/objects/ServiceContract/recordTypes/NDA.recordType-meta.xml
<RecordType>
    <fullName>NDA</fullName>
    <active>true</active>
    <description>used to manage Non-disclosure agreements</description>
    <label>NDA</label>
</RecordType>