force-app/main/default/objects/ServiceContract/recordTypes/Reagent_Rental.recordType-meta.xml
<RecordType>
    <fullName>Reagent_Rental</fullName>
    <active>true</active>
    <description>Used to manage Reagent Rental Contracts</description>
    <label>Reagent Rental</label>
</RecordType>