force-app/main/default/objects/ServiceContract/recordTypes/Service.recordType-meta.xml
<RecordType>
    <fullName>Service</fullName>
    <active>true</active>
    <description>used to manage Service Contracts</description>
    <label>Service</label>
</RecordType>