force-app/main/default/objects/ServiceContract/listViews/All_Service_Contracts.listView-meta.xml
<ListView>
    <fullName>All_Service_Contracts</fullName>
    <columns>CONTRACT.NAME</columns>
    <columns>CONTRACT.STARTDATE</columns>
    <columns>CONTRACT.ENDDATE</columns>
    <columns>CONTRACT.APPROVALSTATUS</columns>
    <columns>CONTRACT.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTRACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>ServiceContract.Service</value>
    </filters>
    <label>All Service Contracts</label>
</ListView>